--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
+  
+    <div class="first-container">
+        <div class="first">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cupiditate dolores, at consectetur minus suscipit nobis adipisci totam repudiandae mollitia?</p>
+        </div>
+    </div>
+    <div class="second">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cupiditate dolores, at consectetur minus suscipit nobis adipisci totam repudiandae mollitia?</p>
+    </div>
+    <div class="third">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis cupiditate dolores, at consectetur minus suscipit nobis adipisci totam repudiandae mollitia?</p>
+    </div>
 </body>
 </html>
